<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/sdk568_size_305dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/sdk568_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:background="@color/sdk568_color1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/sdk568_txt_title_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sdk568_login_title"
            android:textColor="@color/sdk568_white"
            android:textSize="@dimen/sdk568_size_14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/sdk568_size_0.5dp"
            android:layout_height="match_parent"
            android:background="@color/sdk568_color9" />

        <TextView
            android:id="@+id/sdk568_txt_title_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="showRegisterView"
            android:text="@string/sdk568_register_title"
            android:textColor="@color/sdk568_color2"
            android:textSize="@dimen/sdk568_size_14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/sdk568_txt_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_10dp"
        android:background="@drawable/sdk568_edittext"
        android:drawableLeft="@drawable/sdk568_ic_user"
        android:drawablePadding="@dimen/sdk568_size_10dp"
        android:drawableStart="@drawable/sdk568_ic_user"
        android:gravity="center_vertical"
        android:hint="@string/sdk568_hint_user_name"
        android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
        android:inputType="text"
        android:paddingEnd="@dimen/sdk568_size_10dp"
        android:paddingLeft="@dimen/sdk568_size_10dp"
        android:paddingRight="@dimen/sdk568_size_10dp"
        android:paddingStart="@dimen/sdk568_size_10dp"
        android:singleLine="true"
        android:textColor="@color/sdk568_color10"
        android:textSize="@dimen/sdk568_size_12sp" />

    <EditText
        android:id="@+id/sdk568_txt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_10dp"
        android:background="@drawable/sdk568_edittext"
        android:drawableLeft="@drawable/sdk568_ic_lock"
        android:drawablePadding="@dimen/sdk568_size_10dp"
        android:drawableStart="@drawable/sdk568_ic_lock"
        android:gravity="center_vertical"
        android:hint="@string/sdk568_hint_password"
        android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionGo"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/sdk568_size_10dp"
        android:paddingLeft="@dimen/sdk568_size_10dp"
        android:paddingRight="@dimen/sdk568_size_10dp"
        android:paddingStart="@dimen/sdk568_size_10dp"
        android:singleLine="true"
        android:textColor="@color/sdk568_color10"
        android:textSize="@dimen/sdk568_size_12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_10dp"
        android:background="@drawable/sdk568_bg_btn_quick_play"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/sdk568_login_btn_quick_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/sdk568_color4"
            android:gravity="center"
            android:onClick="quickPlay"
            android:text="@string/sdk568_btn_quick_play"
            android:textColor="@color/sdk568_white"
            android:textSize="@dimen/sdk568_size_14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sdk568_login_btn_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="game3Login"
            android:text="@string/sdk568_btn_login"
            android:textColor="@color/sdk568_color4"
            android:textSize="@dimen/sdk568_size_14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginBottom="@dimen/sdk568_size_10dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_10dp" >

        <ImageView
            android:id="@+id/sdk568_form_ic_fb"
            android:layout_width="@dimen/sdk568_size_35dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@null"
            android:onClick="facebookLogin"
            android:src="@drawable/sdk568_ic_fb" />

        <ImageView
            android:layout_width="@dimen/sdk568_size_35dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sdk568_size_4dp"
            android:layout_marginStart="@dimen/sdk568_size_4dp"
            android:layout_toEndOf="@id/sdk568_form_ic_fb"
            android:layout_toRightOf="@id/sdk568_form_ic_fb"
            android:clickable="true"
            android:contentDescription="@null"
            android:onClick="googleLogin"
            android:src="@drawable/sdk568_ic_gg" />

        <TextView
            android:id="@+id/sdk568_btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:onClick="forgotPassword"
            android:text="@string/sdk568_btn_forgot"
            android:textColor="@color/sdk568_gray40"
            android:textSize="@dimen/sdk568_size_12sp" />

        <TextView
            android:id="@+id/sdk568_txt_lang_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="switchToEnglish"
            android:text="@string/sdk568_lang_en"
            android:textColor="@color/sdk568_color10"
            android:textSize="@dimen/sdk568_size_12sp" />

        <TextView
            android:id="@+id/sdk568_txt_vertical_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/sdk568_size_5dp"
            android:layout_marginLeft="@dimen/sdk568_size_5dp"
            android:layout_marginRight="@dimen/sdk568_size_5dp"
            android:layout_marginStart="@dimen/sdk568_size_5dp"
            android:layout_toLeftOf="@id/sdk568_txt_lang_en"
            android:layout_toStartOf="@id/sdk568_txt_lang_en"
            android:clickable="true"
            android:text="@string/sdk568_vertical_separator"
            android:textColor="@color/sdk568_gray40"
            android:textSize="@dimen/sdk568_size_12sp" />

        <TextView
            android:id="@+id/sdk568_txt_lang_vi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/sdk568_txt_vertical_separator"
            android:layout_toStartOf="@id/sdk568_txt_vertical_separator"
            android:clickable="true"
            android:onClick="switchToVietnamese"
            android:text="@string/sdk568_lang_vi"
            android:textColor="@color/sdk568_color10"
            android:textSize="@dimen/sdk568_size_12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_2dp"
        android:background="@color/sdk568_color11" />

</LinearLayout>