<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/sdk568_size_305dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/sdk568_white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:background="@color/sdk568_color1"
        android:gravity="center"
        android:text="@string/sdk568_update_account_title"
        android:textColor="@color/sdk568_white"
        android:textSize="@dimen/sdk568_size_14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sdk568_txt_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_10dp"
        android:background="@drawable/sdk568_edittext"
        android:drawableLeft="@drawable/sdk568_ic_user"
        android:drawablePadding="@dimen/sdk568_size_10dp"
        android:drawableStart="@drawable/sdk568_ic_user"
        android:gravity="center_vertical"
        android:hint="@string/sdk568_hint_user_name"
        android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
        android:inputType="text"
        android:paddingEnd="@dimen/sdk568_size_10dp"
        android:paddingLeft="@dimen/sdk568_size_10dp"
        android:paddingRight="@dimen/sdk568_size_10dp"
        android:paddingStart="@dimen/sdk568_size_10dp"
        android:singleLine="true"
        android:textColor="@color/sdk568_color10"
        android:textSize="@dimen/sdk568_size_12sp" />

    <EditText
        android:id="@+id/sdk568_txt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_4dp"
        android:background="@drawable/sdk568_edittext"
        android:drawableLeft="@drawable/sdk568_ic_lock"
        android:drawablePadding="@dimen/sdk568_size_10dp"
        android:drawableStart="@drawable/sdk568_ic_lock"
        android:gravity="center_vertical"
        android:hint="@string/sdk568_hint_password"
        android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/sdk568_size_10dp"
        android:paddingLeft="@dimen/sdk568_size_10dp"
        android:paddingRight="@dimen/sdk568_size_10dp"
        android:paddingStart="@dimen/sdk568_size_10dp"
        android:singleLine="true"
        android:textColor="@color/sdk568_color10"
        android:textSize="@dimen/sdk568_size_12sp" />

    <EditText
        android:id="@+id/sdk568_txt_repassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_4dp"
        android:background="@drawable/sdk568_edittext"
        android:drawableLeft="@drawable/sdk568_ic_lock"
        android:drawablePadding="@dimen/sdk568_size_10dp"
        android:drawableStart="@drawable/sdk568_ic_lock"
        android:gravity="center_vertical"
        android:hint="@string/sdk568_hint_repassword"
        android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionGo"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/sdk568_size_10dp"
        android:paddingLeft="@dimen/sdk568_size_10dp"
        android:paddingRight="@dimen/sdk568_size_10dp"
        android:paddingStart="@dimen/sdk568_size_10dp"
        android:singleLine="true"
        android:textColor="@color/sdk568_color10"
        android:textSize="@dimen/sdk568_size_12sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_35dp"
        android:layout_marginBottom="@dimen/sdk568_size_10dp"
        android:layout_marginEnd="@dimen/sdk568_size_15dp"
        android:layout_marginLeft="@dimen/sdk568_size_15dp"
        android:layout_marginRight="@dimen/sdk568_size_15dp"
        android:layout_marginStart="@dimen/sdk568_size_15dp"
        android:layout_marginTop="@dimen/sdk568_size_15dp"
        android:background="@color/sdk568_color4"
        android:onClick="updateProfile"
        android:text="@string/sdk568_btn_update_account"
        android:textColor="@color/sdk568_white"
        android:textSize="@dimen/sdk568_size_14sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdk568_size_2dp"
        android:background="@color/sdk568_color11" />

</LinearLayout>